--- a/app.css
+++ b/app.css
@@ -49,7 +49,7 @@
     padding: 10px 5px;
   }
 
-  .calculator__display--for-advanced {
+  .calculator__display {
     background-color: #ffffff;
     height: 100px;
     width: 100%;
